# Marlin

./: .env  Cargo.toml  README.md
scripts/: bert_fast_api.py
src/: main.rs  main_old.rs
src/api/: mod.rs  server.rs
src/model/: language_model.rs  manager.rs  mod.rs
src/model/backends/: mod.rs
src/model/backends/candle/: mod.rs  text_generation.rs
src/model/backends/onnx/: bert_onnx.rs  mod.rs
src/model/traits/: mod.rs  model_trait.rs  onnx_trait.rs
