[package]
name = "CandleExp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
clap = "4.5.15"
hf-hub = "0.3.2"
safetensors = "0.4.4"
tokenizers = "0.20.0"
serde_json = "1.0.122"
candle-core = "0.6.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
actix-web = "4.9.0"
serde = { version = "1.0.207", features = ["derive"] }
env_logger = "0.11.5"
once_cell = "1.19.0"
async-trait = "0.1.81"
tract = "0.21.6"
tract-onnx = "0.21.6"
ndarray = "0.16.1"
#ort = { version = "2.0.0-rc.4",features = ["coreml"] }
ort = { version = "2.0.0-rc.5"}
log = "0.4.22"
